--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#dc2626"
       },
       "package": "com.borenx.musicintervaltrainer"
     },
